<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/parent_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray">


        <LinearLayout
            android:id="@+id/logInControl_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <!--<EditText
                android:id="@+id/user_name"
                style="@style/text_single_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/if_use"
                android:fontFamily=""
                android:gravity="center_horizontal"
                android:hint="@string/user_name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                style="@style/text_single_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/lock_24"
                android:fontFamily=""
                android:gravity="center_horizontal"
                android:hint="@string/password_hints"
                android:inputType="textPassword" />-->

            <EditText
                android:id="@+id/edtPinNumber"
                style="@style/text_single_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/unlock_code_32"
               android:drawableStart="@drawable/unlock_code_32"
                android:fontFamily=""
                android:gravity="center_horizontal"
                android:hint="@string/pin_no_hints"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">


                <Button
                    android:id="@+id/btnExit"
                    style="@style/button_action_normal"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".5"
                    android:background="@drawable/rounded_edit_text"
                    android:padding="5dp"
                    android:text="@string/clean"
                    android:textColor="@color/blue" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/button_action_normal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight=".5"
                    android:background="@drawable/rounded_edit_text"
                    android:padding="5dp"
                    android:text="@string/login"
                    android:textColor="@color/blue" />


            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_above="@+id/logInControl_ll"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_dlite_256" />


    </RelativeLayout>
</ScrollView>

