<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.faisal.technodhaka.dlight.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/welcome_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:paddingTop="10dp"
                android:text="@string/welcome"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/fullname"
                android:textColor="#333333"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/country"
                android:textSize="15dp" />


            <Spinner
                android:id="@+id/spDCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|right"
                android:layout_marginLeft="50dp"
                android:background="#FFFFFF"
                android:drawSelectorOnTop="true"
                android:padding="2dp"

                android:textColor="#939393" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:text="ACTIVITY"
                    android:textSize="18sp"
                    android:textStyle="bold" />


    <!--            <Button
                    android:id="@+id/btnDynamicData"
                    style="@style/btn_main_page"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"

                    android:drawableLeft="@drawable/dynamic_icon_42"
                    android:drawableStart="@drawable/dynamic_icon_42"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:text="dynamic_data" />-->



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight=".45"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="apk_on_device"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="device_id"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_deviceId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="xxxxxx_xxxxxxxx" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="version_name"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="log_in_version_lable" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    android:gravity="center_horizontal"
                    android:text="labe_op_mode"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_operation_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="label_geo_data"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="label_last_sync"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_last_sync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="N/A" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="Sync Required"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sync_required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnSyncRecord"
                style="@style/btn_sync"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="5dp"
                android:layout_weight=".55"
                android:drawableLeft="@drawable/sync"
                android:drawableStart="@drawable/sync"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="  SYNC"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnLogout"
                style="@style/btn_logout"
                android:layout_marginLeft="3dp"
                android:layout_weight=".45"
                android:drawableLeft="@drawable/logout"
                android:gravity="center_vertical"
                android:paddingLeft="92dp"
                android:text="  Logout"

                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>